--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,7 @@
 
   <body>
     <%= yield %>
+    <%= link_to "Sign Out", destroy_user_session_path, 
+method: :delete, class: "btn btn-danger"%>
   </body>
 </html>
