--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <%= yield %>
+    <%= link_to "Twitter Feed", feed_path, class:'btn btn-primary' %>
     <%= link_to "Sign Out", destroy_user_session_path, 
 method: :delete, class: "btn btn-danger"%>
   </body>
